show what gives, name soil dirt

--- a/dat/world.yaml
+++ b/dat/world.yaml
@@ -29,7 +29,7 @@ WorldGen:
             where: buried
             color: white
 
-        soil:
+        dirt:
             name: soil
             char: '.'
             material: soil
