--- a/qwack/world.yaml
+++ b/qwack/world.yaml
@@ -11,6 +11,7 @@ Materials:
 Where:
     # descending top-down occlusion order
     - unattached
+    - floor
     - buried
 
 Player:
@@ -18,112 +19,26 @@ Player:
     name: player
     material: flesh
     where: unattached
-    visibility: 2
+    darkness: 0
+    # doesn't matter except for multiplayer
+    land_passable: False
+    # doesn't matter
+    speed: 0
+
+# just a test boat to play with
+Boat:
+    tile_id: 16
+    name: boat
+    material: construction
+    where: floor
+    darkness: 0
+    land_passable: True
+    speed: 0
 
 
 # all liquid is water_passable by default, unless specified
 # all items are air_ and land_passable by default, unless specified
 
-WorldMap:
-    # World map definitions, from WORLD.DAT of Ultima IV
-    # each integer type could map to any number of items,
-    # keyed unique by unique 'where', though
-    0:
-        buried:
-            name: Deep Water
-            material: liquid
-    1:
-        buried:
-            name: Medium Water
-            material: liquid
-    2:
-        buried:
-            name: Shallow Water
-            material: liquid
-            water_passable: no
-    3:
-        buried:
-            name: Swamp
-            material: mud
-    4:
-        buried:
-            name: Grasslands
-            material: plant
-    5:
-        buried:
-            name: Scrubland
-            material: plant
-    6:
-        buried:
-            name: Forest
-            material: plant
-            visibility: 1
-    7:
-        buried:
-            maerial: soil
-            name: Hills
-    8:
-        buried:
-            name: mountain
-            material: stone
-            land_passable: no
-            visibility: 1
-    9:
-        buried:
-            name: mountain door
-            material: construction
-    10:
-        buried:
-            name: city
-            material: construction
-    11:
-        buried:
-            name: castle
-            material: construction
-    12:
-        buried:
-            name: village
-            material: construction
-    13:
-        buried:
-            name: castle_lg_left
-            material: construction
-            land_passable: no
-    14:
-        buried:
-            name: castle_lg_center
-            material: construction
-            passable_only: south
-    15:
-        buried:
-            name: castle_lg_right
-            material: construction
-            land_passable: no
-    23:
-        buried:
-            name: bridge
-            material: construction
-    29:
-        buried:
-            name: ruin
-            material: stone
-    30:
-        buried:
-            name: shrine
-            material: stone
-    61:
-        buried:
-            name: Ankh
-            material: construction
-            land_passable: no
-    70:
-        buried:
-            name: Fire Field
-            material: fire
-    76:
-        buried:
-            name: Lava Flow
-            material: fire
 
 # TODO: use these 'official' names from https://wiki.ultimacodex.com/wiki/Ultima_IV_internal_formats#SHAPES.EGA
 # 0 	Deep Water
@@ -382,3 +297,149 @@ WorldMap:
 # 253 	Balron 2
 # 254 	Balron 3
 # 255 	Balron 4 
+
+
+
+WorldMap:
+    # World map definitions, from WORLD.DAT of Ultima IV
+    # each integer type could map to any number of items,
+    # keyed unique by unique 'where', though
+    0:
+        buried:
+            name: Deep Water
+            material: liquid
+            land_passable: no
+    1:
+        buried:
+            name: Medium Water
+            material: liquid
+            land_passable: no
+    2:
+        buried:
+            name: Shallow Water
+            material: liquid
+            water_passable: no
+            land_passable: no
+    3:
+        buried:
+            name: Swamp
+            material: mud
+            speed: 8
+    4:
+        buried:
+            name: Grasslands
+            material: plant
+    5:
+        buried:
+            name: Scrubland
+            material: plant
+            darkness: 0
+            speed: 4
+    6:
+        buried:
+            name: Forest
+            material: plant
+            darkness: 1
+
+    7:
+        buried:
+            maerial: soil
+            name: Hills
+            speed: 2
+    8:
+        buried:
+            name: mountain
+            material: stone
+            land_passable: no
+            darkness: 1
+    9:
+        buried:
+            name: mountain door
+            material: construction
+    10:
+        buried:
+            name: city
+            material: construction
+    11:
+        buried:
+            name: castle
+            material: construction
+    12:
+        buried:
+            name: village
+            material: construction
+    13:
+        buried:
+            name: castle_lg_left
+            material: construction
+            land_passable: no
+    14:
+        buried:
+            name: castle_lg_center
+            material: construction
+            passable_only: south
+    15:
+        buried:
+            name: castle_lg_right
+            material: construction
+            land_passable: no
+    23:
+        buried:
+            name: bridge
+            material: construction
+    29:
+        buried:
+            name: ruin
+            material: stone
+    30:
+        buried:
+            name: shrine
+            material: stone
+    61:
+        buried:
+            name: Ankh
+            material: construction
+            land_passable: no
+    70:
+        buried:
+            name: Fire Field
+            material: fire
+            speed: 2
+    76:
+        buried:
+            name: Lava Flow
+            material: fire
+
+Portals:
+  - { x: 86,  y: 107, z: 1, dest_id: 1, action: 15, savelocation: 30}
+  - { x: 218, y: 107, z: 1, dest_id: 2, action: 15, savelocation: 30}
+  - { x: 28,  y:  50, z: 1, dest_id: 3, action: 15, savelocation: 30}
+  - { x: 146, y: 241, z: 1, dest_id: 4, action: 15, savelocation: 30}
+  - { x: 232, y: 135, z: 1, dest_id: 5, action: 1, savelocation: 15}
+  - { x: 82,  y: 106, z: 1, dest_id: 6, action: 1, savelocation: 15}
+  - { x: 36,  y: 222, z: 1, dest_id: 7, action: 1, savelocation: 15}
+  - { x: 58,  y:  43, z: 1, dest_id: 8, action: 1, savelocation: 15}
+  - { x: 159, y:  20, z: 1, dest_id: 9, action: 1, savelocation: 15}
+  - { x: 106, y: 184, z: 1, dest_id: 0, action: 1, savelocation: 15}
+  - { x: 22,  y: 128, z: 1, dest_id: 1, action: 1, savelocation: 15}
+  - { x: 187, y: 169, z: 1, dest_id: 2, action: 1, savelocation: 15}
+  - { x: 98,  y: 145, z: 1, dest_id: 3, action: 1, savelocation: 15}
+  - { x: 136, y: 158, z: 1, dest_id: 4, action: 1, savelocation: 15}
+  - { x: 201, y:  59, z:1,  dest_id: 5, action: 1, savelocation: 15}
+  - { x: 136, y:  90, z:1,  dest_id: 6, action: 1, savelocation: 15}
+  - { x: 240, y:  73, z:1,  dest_id: 7, action: 1, savelocation: 1}
+  - { x: 91,  y:  67, z:1,  dest_id: 8, action: 1, savelocation: 1}
+  - { x: 72,  y: 168, z: 1, dest_id: 9, action: 1, savelocation: 1}
+  - { x: 126, y:  20, z: 1, dest_id: 0, action: 1, savelocation: 1}
+  - { x: 156, y:  27, z: 1, dest_id: 1, action: 1, savelocation: 1}
+  - { x: 58,  y: 102, z: 1, dest_id: 2, action: 1, savelocation: 1}
+  - { x: 239, y: 240, z: 1, dest_id: 3, action: 1, savelocation: 1}
+  - { x: 233, y: 233, z: 1, dest_id: 4, action: 1, savelocation: 1}
+  - { x: 233, y:  66, z: 1, dest_id: 5, action: 0, savelocation: 0}
+  - { x: 128, y:  92, z: 1, dest_id: 6, action: 0, savelocation: 0}
+  - { x: 36,  y: 229, z: 1, dest_id: 7, action: 0, savelocation: 0}
+  - { x: 73,  y:  11, z:1,  dest_id: 8, action: 0, savelocation: 0}
+  - { x: 205, y:  45, z:1,  dest_id: 9, action: 0, savelocation: 0}
+  - { x: 81,  y: 207, z:1,  dest_id: 0, action: 0, savelocation: 0}
+  - { x: 231, y: 216, z:1,  dest_id: 2, action: 0, savelocation: 0}
+
