added secret test city, "Luke's Computers"

--- a/qwack/dat/world.yaml
+++ b/qwack/dat/world.yaml
@@ -263,9 +263,12 @@ Shapes:
     73:
             name: Hidden Passage
             darkness: 1
+    74:
+            name: Altar
+            material: stone
     75:
-                name: Spit
-                material: fire
+            name: Spit
+            material: construction
     76:
             name: Lava Flow
             material: fire
@@ -425,8 +428,17 @@ Shapes:
             darkness: 1
 
 
+    189:
+            name: Avatar
+            darkness: 1
+
+
+
 World:
         map_filename: 'world.map'
+        # lord british's castle
+        start_y: 107
+        start_x: 86
         special_items:
                 - { name: "balloon",     y: 233, x: 242 }
                 - { name: "lockelake",   y: 127, x: 78 }
@@ -441,6 +453,9 @@ World:
                 - { name: "blackstone",  y: 224, x: 133 }
                 - { name: "whitestone",  y: 64,  x: 80 }
         Portals:
+                # XXX Luke's computer shop hidden in the grass!!!
+                - { "y": 106, "x": 88, "z": 0, "start_x": 12, "start_y": 17, "start_z": 0, "dest_id":  -99 }
+                #
                 - { "x":  86, "y": 107, "z": 0, "start_x": 15, "start_y": 30, "start_z": 0, "dest_id":  1 }
                 - { "x": 218, "y": 107, "z": 0, "start_x": 15, "start_y": 30, "start_z": 0, "dest_id":  2 }
                 - { "x":  28, "y":  50, "z": 0, "start_x": 15, "start_y": 30, "start_z": 0, "dest_id":  3 }
@@ -483,6 +498,41 @@ Maps:
   #     27,3,0 27,3,0 0x2 0x1 56 0,0
   #     ra-dest [239,240,0 0]    7,2,0 5,5,0 0x4 0x1 23 0,0
   #   )
+  -99:
+     type: city
+     tlk_filename: lcb_1.tlk
+     border_heavior: 1
+     city_type: castle
+     name: Luke's Computer Shop
+     map_data: [
+        [ 127, 127, 127, 127, 127, 107, 116, 106, 100, 114, 127, 127, 127, 127, 127, 127 ],
+        [ 127, 122, 122,  98, 110, 108, 111, 116, 115, 100, 113, 114, 127, 122, 122, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
+        [ 127,  62,  62, 124, 122, 104,  97, 108, 126, 123,  62,  62,  62,  62,  62, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62, 125,  62, 125,  62, 125,  62, 125,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62, 124,  96, 111, 111, 107, 100, 123,  62,  62, 125,  62,  62, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
+        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62,  74, 127 ],
+        [ 127,  62,  62, 125,  62, 125,  62, 125,  62, 125,  62,  62, 125,  62, 125, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
+        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
+        [ 127, 125, 127, 125, 127, 125, 127, 125, 127, 125, 127,  59, 127, 125, 125, 127 ],
+        [  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62 ],
+     ]
+     npcs:
+         - tile_id: 90
+           pos: [7, 13]
+           name: Luke
+           material: flesh
+           where: floor
+           darkness: 1
+           land_passable: False
+           speed: 0
+ 
   1:
      type: city
      tlk_filename: lcb_1.tlk
