--- a/qwack/dat/world.yaml
+++ b/qwack/dat/world.yaml
@@ -2,6 +2,7 @@
 # flooding, burning, growing, cellular autonoma stuff, but it is so far unused, here ..
 Materials:
     - fire
+    - ether
     - liquid
     - mud
     - soil
@@ -245,26 +246,26 @@ Shapes:
        name: Wooden Planks
     68:
        name: Poison Field
-       material: liquid 
+       material: ether
        sort_value: 3
        brightness: 1
        land_passable: yes
     69:
        name: Energy Field
-       material: fire
+       material: ether
        sort_value: 3
        brightness: 1
        land_passable: yes
     70:
        name: Fire Field
-       material: fire
+       material: ether
        speed: 2
        sort_value: 3
        brightness: 1
        land_passable: yes
     71:
        name: Sleep Field
-       material: fire
+       material: ether
        speed: 2
        sort_value: 3
        brightness: 1
@@ -456,7 +457,7 @@ Shapes:
     122:
         name: Space
         land_passable: no
-        brightness: 1
+        brightness: 0
     123:
         name: Right
         land_passable: no
@@ -624,8 +625,8 @@ World:
         Portals:
                 # XXX Luke's computer shop hidden in the grass!!!
                 - { "y": 106, "x": 88, "z": 0, "start_x": 11, "start_y": 16, "start_z": 0, "dest_id":  -99 }
-                # XXX Pharoah BOB
-                - { "y": 106, "x": 84, "z": 0, "start_x": 11, "start_y": 16, "start_z": 0, "dest_id":  -98 }
+                # XXX Pharoah "BOB"
+                - { "y": 106, "x": 84, "z": 0, "start_x": 3, "start_y": 10, "start_z": 0, "dest_id":  -98 }
 
                 - { "x":  86, "y": 107, "z": 0, "start_x": 15, "start_y": 30, "start_z": 0, "dest_id":  1 }
                 - { "x": 218, "y": 107, "z": 0, "start_x": 15, "start_y": 30, "start_z": 0, "dest_id":  2 }
@@ -669,23 +670,17 @@ Maps:
      city_type: castle
      name: Bob's Pyramid
      map_data: [
-        [ 127, 127, 127, 127, 127, 107, 116, 106, 100, 114, 127, 127, 127, 127, 127, 127 ],
-        [ 127, 122, 122,  98, 110, 108, 111, 116, 115, 100, 113, 114, 127, 122, 122, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
-        [ 127,  62,  62, 124, 122, 104,  97, 108, 126, 123,  62,  62,  62,  62,  62, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62, 125,  62, 125,  62, 125,  62, 125,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62, 124,  96, 111, 111, 107, 100, 123,  62,  62, 125,  62,  62, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
-        [ 127,  62,  62,  74,  62,  74,  62,  74,  62,  74,  62,  62,  62,  62,  74, 127 ],
-        [ 127,  62,  62, 125,  62, 125,  62, 125,  62, 125,  62,  62, 125,  62, 125, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
-        [ 127,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62, 127 ],
-        [ 127, 125, 127, 125, 127, 125, 127, 125, 127, 125, 127,  59, 127, 125, 125, 127 ],
-        [  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62,  62 ],
+        [   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2 ],
+        [   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2,   2 ],
+        [   2,   2,   2,   2,   2,  50,  51,   2,   2,   2,   2,   2,   2,   2,   2,   2 ],
+        [   2,   2,   2,   2,  50,  72,  72,  51,   2,   2,   2,   2,   2,   2,   2,   2 ],
+        [   2,   2,   2,  50,  72,  72,  72,  72,  51,   2,   2,   2,   2,   2,   2,   2 ],
+        [   2,   2,  50,  72,  72,  72,  72,  72,  72,  51,   2,   2,   2,   2,   2,   2 ],
+        [   2,  50,  72,  72,  72,  72,  72,  72,  72,  72,  51,   2,   2,   2,   2,   2 ],
+        [  50,  72,  72,  72,  72,  72,  72,  72,  72,  72,  72,  51,   2,   2,   2,   2 ],
+        [   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   2,   2,   2 ],
+        [   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   2,   2 ],
+        [   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   4,   2,   2 ],
      ]
      npcs:
          - tile_id: 90
